--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<section class="intro">
 		<h1 align="middle">Welcome to my first page!!!
 		</h1>
-		<a href="https://nodir1999.github.io/Nodirbek1999student/"><img src="github.png" alt=""></a>
+		<a href="https://nodir1999.github.io/WebNodir/"><img src="github.png" alt=""></a>
 	</section>
 	<section id="about">
 		<div  class="image">
