--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 		<a href="#about">About</a>
 		<a href="#contact">Contact</a>
 		<a href="Movies.html">Movies</a>
+		<a href="https://nodir1999.github.io/Nodir1999Azizov/">GitHub</a>
 		</nav>
 	</header>
 	<section class="intro">
 		<h1 align="middle">Welcome to my first page!!!
 		</h1>
-		<a href="https://nodir1999.github.io/WebNodir/"><img src="github.png" alt=""></a>
+		<img src="github.png" alt="">
 	</section>
 	<section id="about">
 		<div  class="image">
